--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN npm run build || npx tsc
 EXPOSE 4001
-CMD ["npm", "run", "start"]
+CMD ["node", "dist/index.js"]
