--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -12,6 +13,7 @@
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@types/express": "^4.17.21"
   }
 }
